# rag-knowledge-base

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: chat.py  documents.py  health.py  router.py  search.py  workspaces.py
backend/app/middleware/: logging.py  rate_limiter.py
backend/app/models/: __init__.py  chunk.py  conversation.py  document.py  workspace.py
backend/app/schemas/: chat.py  documents.py  search.py  workspaces.py
backend/app/services/: cache.py  chat_service.py  chunker.py  document_service.py  embedding.py  ingestion.py  llm_client.py  vector_search.py
backend/app/tasks/: celery_app.py  document_tasks.py
backend/tests/: conftest.py
backend/tests/test_api/: test_documents.py  test_workspaces.py
backend/tests/test_services/: test_chunker.py  test_ingestion.py
docker/: backend.Dockerfile  worker.Dockerfile
docs/: index.html
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/app/: layout.tsx
frontend/src/app/workspaces/: page.tsx
frontend/src/components/chat/: chat-input.tsx  chat-panel.tsx  citation-card.tsx  message-bubble.tsx  message-list.tsx
frontend/src/hooks/: use-chat.ts  use-documents.ts  use-workspaces.ts
frontend/src/lib/: api-client.ts  sse-client.ts  utils.test.ts  utils.ts
frontend/src/types/: api.ts
(+13 files in other folders)
